高次ABCによる周波数領域FEMの2D導波路伝達問題

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -141,13 +141,28 @@
     </Compile>
     <Compile Include="NonlinerOptimizingProblem.cs" />
     <Compile Include="PortEdge.cs" />
+    <Compile Include="Problem.EMEWaveguide1_0.cs" />
     <Compile Include="Problem.EMEWaveguide1.cs" />
+    <Compile Include="Problem.EMHWaveguide1_0.cs" />
+    <Compile Include="Problem.EMHWaveguide2_0.cs" />
     <Compile Include="Problem.EMHWaveguide2.cs" />
-    <Compile Include="Problem.EMHWaveguideFirstOrderABCTDb2Open.cs" />
-    <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb2Open.cs" />
-    <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb2Open_0.cs" />
-    <Compile Include="Problem.EMHWaveguideFirstOrderABCTDb2Open_0.cs" />
+    <Compile Include="Problem.EMHWaveguideFirstOrderABCTDb3.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCb3.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCb3_0.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCb2.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCb2_0.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCb1.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCb1_0 .cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCa1_0.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCa1.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCa2.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCa3.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb3.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCa3_0.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb3_0.cs" />
+    <Compile Include="Problem.EMHWaveguideFirstOrderABCTDb3_0.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb2.cs" />
+    <Compile Include="Problem.EMHWaveguideHigherOrderABCa2_0 .cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb2_0.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb1.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb1_0.cs" />
@@ -156,9 +171,9 @@
     <Compile Include="Problem.FFT.cs" />
     <Compile Include="Problem.OptimizeProblem1.cs" />
     <Compile Include="Problem.PCWaveguideTriangleLattice1.cs" />
-    <Compile Include="Problem.PCWaveguideTriangleLattice0.cs" />
+    <Compile Include="Problem.PCWaveguideTriangleLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguideSquareLattice1.cs" />
-    <Compile Include="Problem.PCWaveguideSquareLattice0.cs" />
+    <Compile Include="Problem.PCWaveguideSquareLattice1_0.cs" />
     <Compile Include="Problem.PressurePoissonWithBellFluid2.cs" />
     <Compile Include="Problem.PressurePoissonWithBellFluid1.cs" />
     <Compile Include="Problem.PressurePoissonFluidRK2.cs" />
