--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -147,6 +147,18 @@
     <Compile Include="Problem.EMHWaveguide2_0.cs" />
     <Compile Include="Problem.EMHWaveguide2.cs" />
     <Compile Include="Problem.EMHWaveguideFirstOrderABCTDb3.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLb3.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLb3_0.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLb2.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLb2_0.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLb1.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLb1_0 .cs" />
+    <Compile Include="Problem.EMHWaveguidePMLa3.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLa3_0.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLa2.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLa2_0.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLa1.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLa1_0.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCb3.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCb3_0.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCb2.cs" />
@@ -157,6 +169,12 @@
     <Compile Include="Problem.EMHWaveguideHigherOrderABCa1.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCa2.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCa3.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLTDb3.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLTDb3_0.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLTDb2.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLTDb2_0.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLTDb1.cs" />
+    <Compile Include="Problem.EMHWaveguidePMLTDb1_0.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb3.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCa3_0.cs" />
     <Compile Include="Problem.EMHWaveguideHigherOrderABCTDb3_0.cs" />
