PCWaveguide PBC(Periodic Boundary Conditions) Frequency Domain

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -182,15 +182,19 @@
     <Compile Include="Problem.PCWaveguideModalABCZTDSquareLattice1.cs" />
     <Compile Include="Problem.PCWaveguideModalABCZTDTriangleLattice1.cs" />
     <Compile Include="Problem.PCWaveguideModalABCZTDTriangleLattice1_0.cs" />
+    <Compile Include="Problem.PCWaveguidePBCSquareLattice1.cs" />
+    <Compile Include="Problem.PCWaveguidePBCTriangleLattice1.cs" />
     <Compile Include="Problem.PCWaveguidePMLSquareLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguidePMLSquareLattice1.cs" />
     <Compile Include="Problem.PCWaveguidePMLTriangleLattice1.cs" />
     <Compile Include="Problem.PCWaveguidePMLTDTriangleLattice1.cs" />
+    <Compile Include="Problem.PCWaveguidePBCTriangleLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguidePMLTriangleLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguidePMLTDTriangleLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguidePMLTDSquareLattice1.cs" />
     <Compile Include="Problem.PCWaveguidePMLTDSquareLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguideEigenSquareLattice1.cs" />
+    <Compile Include="Problem.PCWaveguidePBCSquareLattice1_0.cs" />
     <Compile Include="Problem.PCWaveguideTriangleLattice1.cs" />
     <Compile Include="Problem.PCWaveguideEigenTriangleLattice1.cs" />
     <Compile Include="Problem.PCWaveguideTriangleLattice2.cs" />
