構造要素(Truss、Beam、Frame)

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -141,6 +141,10 @@
     </Compile>
     <Compile Include="NonlinerOptimizingProblem.cs" />
     <Compile Include="PortEdge.cs" />
+    <Compile Include="Problem.ElasticFrame.cs" />
+    <Compile Include="Problem.ElasticBeamEigen.cs" />
+    <Compile Include="Problem.ElasticBeam.cs" />
+    <Compile Include="Problem.ElasticTruss.cs" />
     <Compile Include="Problem.EMEWaveguide1_0.cs" />
     <Compile Include="Problem.EMEWaveguide1.cs" />
     <Compile Include="Problem.EMHWaveguide1_0.cs" />
