SH wave(Shear Horizontal wave)弾性波プレート導波路伝達問題

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Problem.EddyCurrent1.cs" />
     <Compile Include="Problem.ElasticBeam3.cs" />
     <Compile Include="Problem.ElasticBeam2.cs" />
+    <Compile Include="Problem.ElasticSHWaveguide2.cs" />
+    <Compile Include="Problem.ElasticSHWaveguide1.cs" />
     <Compile Include="Problem.ElasticSHWaveguide0.cs" />
     <Compile Include="Problem.ElasticLambWaveguide1.cs" />
     <Compile Include="Problem.ElasticMITCStVenantThicknessStretchPlate2.cs" />
