--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Problem.EddyCurrent1.cs" />
     <Compile Include="Problem.ElasticBeam3.cs" />
     <Compile Include="Problem.ElasticBeam2.cs" />
+    <Compile Include="Problem.ElasticLambWaveguideFirstOrderABC0_0.cs" />
+    <Compile Include="Problem.ElasticLambWaveguideFirstOrderABC1_0.cs" />
     <Compile Include="Problem.ElasticLambWaveguidePML0_0.cs" />
     <Compile Include="Problem.ElasticLambWaveguidePML1_0.cs" />
     <Compile Include="Problem.ElasticLambWaveguidePML1.cs" />
