--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/IvyFEMProtoApp.csproj
@@ -185,8 +185,9 @@
     <Compile Include="Problem.ElasticTwoBodyContact3D2.cs" />
     <Compile Include="Problem.ElasticTwoBodyContact3D1.cs" />
     <Compile Include="Problem.ElasticTwoBodyContact2.cs" />
-    <Compile Include="Problem.FluidDisplacement1.cs" />
-    <Compile Include="Problem.FluidFIC2.cs" />
+    <Compile Include="Problem.FluidRANS0.cs" />
+    <Compile Include="Problem.FluidRANS2.cs" />
+    <Compile Include="Problem.FluidRANS1.cs" />
     <Compile Include="Problem.FluidFIC1.cs" />
     <Compile Include="Problem.Fluid3D1.cs" />
     <Compile Include="Problem.Hyperelastic3D.cs" />
